feat: 이메일 주소 확인과 수신 동의 및 발송 대기 처리 추가
